Fix navbar cropping ved horizontal overflow

--- a/applicationlist/static/core/css/core.css
+++ b/applicationlist/static/core/css/core.css
@@ -10,7 +10,12 @@
  * Global add-ons
  */
 .navbar {
-  border-radius: 0px;
+  border-radius: 0;
+  position: fixed;
+  left: 0;
+  right: 0;
+  margin: 0;
+  z-index: 1000;
 }
 
 
@@ -38,7 +43,7 @@
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 75px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -78,10 +83,19 @@
 }
 @media (min-width: 768px) {
   .main {
+    top: 65px;
     padding-right: 40px;
     padding-left: 40px;
+
   }
 }
+
+@media (max-width: 767px){
+  .main {
+    top: 120px;
+  }
+}
+
 .main .page-header {
   margin-top: 0;
 }
